@@ -39,7 +39,6 @@
     - Length counter for message
     - Remove retweets
     - Save images
-    - Delete Direct messages with click
 
 - Bugs:
     - Feedback for buttons
