@@ -1,0 +1,48 @@
+package com.klinker.android.talon.utilities;
+
+import android.content.ContentValues;
+import android.content.Context;
+import android.graphics.Bitmap;
+import android.os.Environment;
+import android.provider.MediaStore;
+import android.widget.Toast;
+import com.klinker.android.talon.R;
+
+import java.io.File;
+import java.io.FileOutputStream;
+
+/**
+ * Created with IntelliJ IDEA.
+ * User: luke
+ * Date: 11/21/13
+ * Time: 4:02 PM
+ * To change this template use File | Settings | File Templates.
+ */
+public class IOUtils {
+
+    public static void saveImage(Bitmap finalBitmap, String d, Context context) {
+        String root = Environment.getExternalStorageDirectory().toString();
+        File myDir = new File(root + "/Talon");
+        myDir.mkdirs();
+        String fname = d + ".jpg";
+        File file = new File(myDir, fname);
+        if (file.exists()) file.delete();
+        try {
+            FileOutputStream out = new FileOutputStream(file);
+            finalBitmap.compress(Bitmap.CompressFormat.JPEG, 100, out);
+            out.flush();
+            out.close();
+
+        } catch (Exception e) {
+            Toast.makeText(context, "Error", Toast.LENGTH_SHORT).show();
+            e.printStackTrace();
+        }
+
+        //context.sendBroadcast(new Intent(Intent.ACTION_MEDIA_MOUNTED, Uri.parse("file://" + Environment.getExternalStorageDirectory())));
+        ContentValues values = new ContentValues();
+        values.put(MediaStore.Images.Media.DATA, file.getAbsolutePath());
+        values.put(MediaStore.Images.Media.MIME_TYPE, "image/jpeg");
+        context.getContentResolver().insert(MediaStore.Images.Media.EXTERNAL_CONTENT_URI, values);
+        Toast.makeText(context, context.getResources().getString(R.string.save_image), Toast.LENGTH_SHORT).show();
+    }
+}
